--- a/src/main/resources/templates/html/adminMonitorizar/admin.html
+++ b/src/main/resources/templates/html/adminMonitorizar/admin.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-    <link rel="icon" href="/imagen/pestaña/corona.jpg" >
+    <link rel="icon" href="/imagen/pestaña/corona.jpg">
 
     <style>
         h3 {
@@ -67,86 +67,50 @@
             cursor: pointer;
             transition: background-color 0.3s;
             text-align: center;
+            text-decoration: none;
         }
 
-        .button:hover {
-            background-color: #999090;
+
+        .nav-link.logout {
+            color: #fff;
+            padding: 0.5rem 1rem;
+            border-radius: 0.25rem;
+            transition: background-color 0.3s;
+        }
+
+        .nav-link.logout:hover {
+            background-color: #dc3545;
+            color: #fff;
         }
     </style>
 </head>
 
 <body>
-    <header class="p-3 bg-dark text-white fixed-top ">
+    <header class="p-3 bg-dark text-white fixed-top">
         <div class="container">
             <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                    <li><img src="/imagen/encabezado/calabera.png" id="foto" alt="Tu imagen" class="w-25 h-60"></li>
+                    <li class="d-flex align-items-center">
+                        <img src="/imagen/encabezado/calabera.png" id="foto" alt="Tu imagen" class="w-25 h-60 me-2">
+                        <span class="text-white">Wanted</span>
+                    </li>
                     <li><a href="/inicio" class="nav-link px-2 text-secondary">Inicio</a></li>
+                    <li sec:authorize="isAuthenticated()" class="nav-item dropdown"> </li>
+                    <a class="nav-link dropdown-toggle text-primary" href="#" role="button" data-bs-toggle="dropdown"
+                        aria-expanded="false" style="padding-left: 0;">
+                        <span class="text-primary">
+                            <span th:text="${#authentication.name}">Nombre de Usuario</span>
+                        </span>
+                    </a>
+                    <li><a href="/admin/meter/figura" class="nav-link px-2 text-secondary">Agregar figura</a></li>
+                    <li><a href="/admin/pagina" class="nav-link px-2 text-secondary">Monitorizar pagina</a></li>
                 </ul>
-                <!-- Esto es para que te pueda filtrar estoy llamando al controlador-->
 
-                <div id="toggleSearchForm" class="d-inline-flex align-items-center" style="margin-right: 10px;">
-                    <i class="bi bi-search"></i>
-                    <form id="searchForm" role="search" method="get" action="/figuras/filtrar">
-                        <label for="buscarPorNombre" class="form-label" id="Filtro"></label>
-                        <input type="text" class="form-control form-control-dark" id="buscarPorNombre"
-                            placeholder="Buscar..." name="nombre">
-                    </form>
-                </div>
+                <form th:action="@{/usuario/logout}" method="post">
+                    <button type="submit" class="nav-link logout btn btn-link">Salir</button>
+                </form>
 
-
-                <div>
-
-                    <div th:if="${#authorization.expression('!isAuthenticated()')}">
-                        <div class="d-flex justify-content-end">
-                            <a href="/inicioSesion/login" class="btn btn-outline-light me-2">Iniciar sesión</a>
-                            <a href="/usuario/signup" class="btn btn-warning">Registrar</a>
-                        </div>
-                    </div>
-                    <ul style="margin-top: auto" class="nav ">
-                        <li sec:authorize="isAuthenticated()" class="nav-item dropdown">
-                            <!-- pones estio -->
-                            <a class="nav-link dropdown-toggle text-primary" href="#" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false" style="padding-left: 0;">
-                                <span class="text-primary">
-                                    <span th:text="${#authentication.name}">Nombre de Usuario</span>
-                                </span>
-                            </a>
-
-                            <ul class="dropdown-menu">
-                                <li><a href="/perfil/new" class="nav-link px-2 text-secondary">Agregar figura</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a href="/admin/pagina" class="nav-link px-2 text-secondary">Monitorizar pagina</a>
-                                </li>
-                                <li>
-                                    <form th:action="@{/usuario/logout}" method="post">
-                                        <button type="submit" class="btn btn-danger">Salir</button>
-                                    </form>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-
-                </div>
-
-
-
-
-                <!--   Son para que te cuentes los inicios de sesion est atambien puesto arriba
-          <div  sec:authorize="hasRole('ROLE_ADMIN')" >
-
-                   <span class="dropdown-item" th:text=" ' App: ' + ${session.numVisitasApp}"></span>
-
-
-                   <span class="dropdown-item" th:text=" ' index: ' + ${session.numVisitasIndex}"></span>
-           </div> -->
             </div>
-
-
-
-
         </div>
     </header>
 
@@ -159,7 +123,7 @@
                 <p>Precio: <span class="price" th:text="${figura.precio}"></span></p>
                 <a class="button" th:href="@{/edit/{id}(id=${figura.id})}">
                     Editar</a>
-                <a  class="button" th:href="@{/figuras/delete/{id}(id=${figura.id})}">Borrar</a>
+                <a class="button" th:href="@{/figuras/delete/{id}(id=${figura.id})}">Borrar</a>
 
             </div>
         </div>
@@ -171,42 +135,42 @@
                 <img th:src="${figuraOnePiece.url}" alt="imagen">
                 <h2 th:text="${figuraOnePiece.nombre}"></h2>
                 <p>Precio: <span class="price" th:text="${figuraOnePiece.precio}"></span></p>
-            
-              <a class="button"th:href="@{/edit/onePiece/{id}(id=${figuraOnePiece.id})}"> Editar<a/>
-               <a  class="button" th:href="@{/figuras/delete/{id}(id=${figuraOnePiece.id})}">Borrar</a>
+
+                <a class="button" th:href="@{/edit/onePiece/{id}(id=${figuraOnePiece.id})}"> Editar<a />
+                    <a class="button" th:href="@{/figuras/delete/{id}(id=${figuraOnePiece.id})}">Borrar</a>
             </div>
         </div>
 
-         
-        </div>
-        <h3>Figuras Naruto </h3>
-        <div th:each="figuraNaruto: ${naruto}" class="figura-container">
 
-            <div>
-                <img th:src="${figuraNaruto.url}" alt="imagen">
-                <h2 th:text="${figuraNaruto.nombre}"></h2>
-                <p>Precio: <span class="price" th:text="${figuraNaruto.precio}"></span></p>
-                <a class="button" th:href="@{/edit/naruto/{id}(id=${figuraNaruto.id})}">Editar</a>
-                    Editar</a>
-                <a  class="button" th:href="@{/figuras/delete/{id}(id=${figuraNaruto.id})}">Borrar</a>
+    </div>
+    <h3>Figuras Naruto </h3>
+    <div th:each="figuraNaruto: ${naruto}" class="figura-container">
 
-            </div>
+        <div>
+            <img th:src="${figuraNaruto.url}" alt="imagen">
+            <h2 th:text="${figuraNaruto.nombre}"></h2>
+            <p>Precio: <span class="price" th:text="${figuraNaruto.precio}"></span></p>
+            <a class="button" th:href="@{/edit/naruto/{id}(id=${figuraNaruto.id})}">Editar</a>
+            Editar</a>
+            <a class="button" th:href="@{/figuras/delete/{id}(id=${figuraNaruto.id})}">Borrar</a>
 
         </div>
-        <h3>Figuras Dragon Ball Z</h3>
-        <div th:each="figuraDragonBall: ${dragonBall}" class="figura-container">
 
-            <div>
-                <img th:src="${figuraDragonBall.url}" alt="imagen">
-                <h2 th:text="${figuraDragonBall.nombre}"></h2>
-                <p>Precio: <span class="price" th:text="${figuraDragonBall.precio}"></span></p>
-                <a class="button" th:href="@{/edit/dragonBall/{id}(id=${figuraDragonBall.id})}">
-                    Editar</a>
-                <a  class="button" th:href="@{/figuras/delete/{id}(id=${figuraDragonBall.id})}">Borrar</a>
+    </div>
+    <h3>Figuras Dragon Ball Z</h3>
+    <div th:each="figuraDragonBall: ${dragonBall}" class="figura-container">
 
-            </div>
+        <div>
+            <img th:src="${figuraDragonBall.url}" alt="imagen">
+            <h2 th:text="${figuraDragonBall.nombre}"></h2>
+            <p>Precio: <span class="price" th:text="${figuraDragonBall.precio}"></span></p>
+            <a class="button" th:href="@{/edit/dragonBall/{id}(id=${figuraDragonBall.id})}">
+                Editar</a>
+            <a class="button" th:href="@{/figuras/delete/{id}(id=${figuraDragonBall.id})}">Borrar</a>
 
         </div>
+
+    </div>
 
 
     </div>
