--- a/src/main/resources/templates/html/encabezado/faqs.html
+++ b/src/main/resources/templates/html/encabezado/faqs.html
@@ -7,73 +7,100 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/caja-boostrap.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="/css/cambiarColoCabezera.css">
     <link rel="icon" href="/imagen/pestaña/corona.jpg" >
 
 </head>
-<body>
-    <header class="p-3 bg-dark text-white fixed-top ">
-        <div class="container">
-            <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-                <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-                    <li><img src="/imagen/encabezado/calabera.png" id="foto" alt="Tu imagen" class="w-25 h-60"></li>
-                    <li><a href="/inicio" class="nav-link px-2 text-secondary">Inicio</a></li>
-                    <li><a href="/caracteristicas" class="nav-link px-2 text-white">Características</a></li>
-                    <li><a href="/pagoEnca" class="nav-link px-2 text-white">Precios</a></li>
-                    <li><a href="/faqs" class="nav-link px-2 text-white">FAQs</a></li>
-                    <li><a href="/encabezado" class="nav-link px-2 text-white">Acerca</a></li>
+<body> <header class="p-3 bg-dark text-white fixed-top ">
+    <div class="container">
+        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+            <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+                <li><img src="/imagen/encabezado/calabera.png" id="foto" alt="Tu imagen" class="w-25 h-60"></li>
+                <li><a href="/inicio" id="linkInicio" class="nav-link px-2 text-secondary">Inicio</a></li>
+                <li><a href="/caracteristicas" id="linkCaracteristicas" class="nav-link px-2 text-white">Características</a></li>
+                <li><a href="/pagoEnca" id="linkPrecios" class="nav-link px-2 text-white">Precios</a></li>
+                <li><a href="/faqs" id="linkFaqs" class="nav-link px-2 text-white">FAQs</a></li>
+                <li><a href="/encabezado" id="linkAcerca" class="nav-link px-2 text-white">Acerca</a></li>
+            </ul>
+            <!-- Esto es para que te pueda filtrar estoy llamando al controlador-->
 
+            <div id="toggleSearchForm" class="d-inline-flex align-items-center" style="margin-right: 10px;">
+                <i class="bi bi-search"></i>
+                <form id="searchForm" role="search" method="get" action="/figuras/filtrar">
+                    <label for="buscarPorNombre" class="form-label" id="Filtro"></label>
+                    <input type="text" class="form-control form-control-dark" id="buscarPorNombre"
+                           placeholder="Buscar..." name="nombre">
+                </form>
+            </div>
+            <div class="d-inline-flex align-items-center" id="addToCart" style="margin-right: 20px;">
+                <i class="bi bi-save"></i>
+            </div>
+
+            <div>
+
+                <div th:if="${#authorization.expression('!isAuthenticated()')}">
+                    <div class="d-flex justify-content-end">
+                        <a href="/inicioSesion/login" class="btn btn-outline-light me-2">Iniciar sesión</a>
+                        <a href="/usuario/signup" class="btn btn-warning">Registrar</a>
+                    </div>
+                </div>
+                <ul style="margin-top: auto" class="nav ">
                     <li sec:authorize="isAuthenticated()" class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-
-
-                            <!--  mirar por que da error-->
-                            <!--  <span th:text="${#authentication.username}">Opciones</span> <span class="caret"></span> -->
-                            <!--<span th:text="${#authentication.name}">Opciones</span>-->
+                        <!-- pones estio -->
+                        <a class="nav-link dropdown-toggle text-primary" href="#" role="button"
+                           data-bs-toggle="dropdown" aria-expanded="false" style="padding-left: 0;">
+                                <span class="text-primary">
+                                    <span th:text="${#authentication.name}">Nombre de Usuario</span>
+                                </span>
                         </a>
+
                         <ul class="dropdown-menu">
-                            <li><span class="dropdown-item" th:text="' App: ' + ${session.numVisitasApp}"></span></li>
-                            <li><span class="dropdown-item" th:text="' index: ' + ${session.numVisitasIndex}"></span>
-                            </li>
+                            <li><a href="/admin/meter/figura" class="nav-link px-2 text-secondary">Agregar
+                                figura</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a href="/perfil/new" class="nav-link px-2 text-secondary">Crear perfil</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
+                            <li><a href="/admin/pagina" class="nav-link px-2 text-secondary">Monitorizar pagina</a>
                             </li>
-                            <li><a href="/perfil/list" class="nav-link px-2 text-secondary">Lista perfiles</a></li>
+                            <li>
+                                <form th:action="@{/usuario/logout}" method="post">
+                                    <button type="submit" class="btn btn-danger">Salir</button>
+                                </form>
+                            </li>
                         </ul>
                     </li>
                 </ul>
-                <!-- Esto es para que te pueda filtrar estoy llamando al controlador-->
 
-
-                <div class="text-end">
-                    <a href="/inicioSesion" class="btn btn-outline-light me-2">Iniciar sesion</a>
-                </div>
-                <div class="text-end">
-
-
-                    <a href="/registrarse" class="btn btn-warning"> Registrar </a><br>
-
-                    <!--    <form id="logoutForm" th:action="@{/usuario/logout}" method="post">
-                    <button type="submit" class="btn btn-warning">
-                        <i class="fas fa-sign-out-alt"></i> Exit
-                    </button>
-                </form>-->
-                </div>
-                <!--   Son para que te cuentes los inicios de sesion est atambien puesto arriba
-          <div  sec:authorize="hasRole('ROLE_ADMIN')" >
-
-                   <span class="dropdown-item" th:text=" ' App: ' + ${session.numVisitasApp}"></span>
-
-
-                   <span class="dropdown-item" th:text=" ' index: ' + ${session.numVisitasIndex}"></span>
-           </div> -->
             </div>
+
+
+
+            <div id="cart" style="margin: 10px;">
+                <i class="bi bi-cart"></i>
+                <span id="cartItemCount">0</span>
+            </div>
+
+            <div id="cartContainer" class="cart-container" style="display: none;">
+                <h2>Carrito de Compras</h2>
+                <ul id="cartItems"></ul>
+                <div id="cartTotal">Total: $0.00</div>
+                <button id="btnComprar">Comprar</button>
+            </div>
+            <!--   Son para que te cuentes los inicios de sesion est atambien puesto arriba
+      <div  sec:authorize="hasRole('ROLE_ADMIN')" >
+
+               <span class="dropdown-item" th:text=" ' App: ' + ${session.numVisitasApp}"></span>
+
+
+               <span class="dropdown-item" th:text=" ' index: ' + ${session.numVisitasIndex}"></span>
+       </div> -->
         </div>
-    </header>
+
+
+
+
+    </div>
+</header>
 <!--cambiar el th action con lo que ponga en el controlador-->
 <form th:action="@{/exit/faqs}" method="post">
 
@@ -167,5 +194,6 @@
 <script th:src="@{/webjars/bootstrap/js/bootstrap.bundle.min.js}" ></script>
 <script src="/js/buscar.js"></script>
 <script src="/js/favoritos.js"></script>
+    <script src="/js/cambiarDeColorCabecera.js"></script>
 </body>
 </html>
