--- a/src/main/resources/templates/html/registarSesion/registrar.html
+++ b/src/main/resources/templates/html/registarSesion/registrar.html
@@ -59,11 +59,11 @@
                             <input type="password" class="form-control" id="password" th:field="*{password}" placeholder="Introduce tu contraseña" required>
                             <div class="text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></div>
                         </div>
-                        <div class="form-group">
+                       <!-- <div class="form-group">
                             <label for="confirmPassword">Confirmar contraseña</label>
-                            <input type="password" class="form-control" id="confirmPassword" th:field="*{confirmPassword}" placeholder="Confirma tu contraseña" required>
-                            <div class="text-danger" th:if="${#fields.hasErrors('confirmPassword')}" th:errors="*{confirmPassword}"></div>
-                        </div>
+                            <input type="password" class="form-control" id="confirmPassword"  placeholder="Confirma tu contraseña" required>
+                            <div class="text-danger"  ></div>
+                        </div>-->
                         <button type="submit" class="btn btn-primary btn-block">Registrar</button>
                     </form>
                 </div>
