--- a/src/main/resources/templates/html/lista.html
+++ b/src/main/resources/templates/html/lista.html
@@ -228,7 +228,37 @@
         </div>
 
 
+<!--        De aqui para abajo hay que cambiar el formato -->
+        <div class="container mt-5">
+            <h3>Lista de Figuras</h3>
+            <div class="card-container">
+                <div th:each="figura: ${listaFigura}" class="card">
+                    <img th:src="${figura.url}" alt="imagen" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title" th:text="${figura.nombre}">Nombre</h5>
+                        <p class="card-text promocion" th:text="${figura.arco?.nombre}">Arco</p>
+                        <p class="card-text" th:text="${figura.des}">Descripción</p>
+                        <p class="card-text precio" th:text="${figura.precio}">Precio</p>
+                        <a th:href="@{/detalle/{id}(id=${figura.id})}" class="btn btn-primary boton">Información</a>
+                        <a th:href="@{/comprar(id=${figura.id})}" class="btn btn-success boton">Comprar</a>
+                        <div class="text-center mt-3">
+                            <i class="bi bi-suit-heart" style="font-size: 30px"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
+        <div style="margin-top: 100px;">
+
+            <h1>Detalle de Figura</h1>
+            <div class="figure-details" th:each="figura: ${listaFigura} ">
+                <img th:src="${figura.url}" alt="imagen">
+                <h2 th:text="${figura.nombre}"></h2>
+                <p>Precio: <span class="price" th:text="${figura.precio}"></span></p>
+
+            </div>
+        </div>
 
         <!-- ahora desde aqui empieza la creacion de las figuras -->
         <!-- Hacer con html y css-->
