echo filtros y tema de stock

--- a/src/main/resources/templates/html/adminMonitorizar/adminMeterFigura.html
+++ b/src/main/resources/templates/html/adminMonitorizar/adminMeterFigura.html
@@ -124,6 +124,7 @@
                 <a href="/figuras/novedad/new" class="btn-dark-custom">Agregar Novedad</a>
                 <a href="/figuras/dragonBall/new" class="btn-dark-custom">Agregar Dragon Ball</a>
                 <a href="/figuras/onePiece/new" class="btn-dark-custom">Agregar One Piece</a>
+                <a href="/figuras/naruto/new" class="btn-dark-custom">Agregar Naruto</a>
             </div>
         </div>
     </div>
