--- a/src/main/resources/templates/html/dragonBall/index.html
+++ b/src/main/resources/templates/html/dragonBall/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/caja-boostrap.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/css/dragonBall.css">
+    <link rel="stylesheet" href="/css/figurasEstilosInicio.css">
     <link rel="icon" href="/imagen/pestaña/corona.jpg" >
 </head>
 
@@ -18,32 +19,33 @@
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                 <li><img src="/imagen/encabezado/calabera.png" id="foto" alt="Tu imagen" class="w-25 h-60"></li>
-                <li><a href="/inicio" class="nav-link px-2 text-secondary">Inicio</a></li>
-                <li><a href="/caracteristicas" class="nav-link px-2 text-white">Características</a></li>
-                <li><a href="/pagoEnca" class="nav-link px-2 text-white">Precios</a></li>
-                <li><a href="/faqs" class="nav-link px-2 text-white">FAQs</a></li>
-                <li><a href="/encabezado" class="nav-link px-2 text-white">Acerca</a></li>
+                <li><a href="/inicio" id="linkInicio" class="nav-link px-2 text-secondary">Inicio</a></li>
+                <li><a href="/caracteristicas" id="linkCaracteristicas" class="nav-link px-2 text-white">Características</a></li>
+                <li><a href="/pagoEnca" id="linkPrecios" class="nav-link px-2 text-white">Precios</a></li>
+                <li><a href="/faqs" id="linkFaqs" class="nav-link px-2 text-white">FAQs</a></li>
+                <li><a href="/encabezado" id="linkAcerca" class="nav-link px-2 text-white">Acerca</a></li>
             </ul>
             <!-- Esto es para que te pueda filtrar estoy llamando al controlador-->
 
             <div id="toggleSearchForm" class="d-inline-flex align-items-center" style="margin-right: 10px;">
                 <i class="bi bi-search"></i>
-                <form id="searchForm" role="search" method="get" action="/figuras/filtrar">
+                <form id="searchForm" role="search" method="get" action="/figuras/filtrarDragon">
                     <label for="buscarPorNombre" class="form-label" id="Filtro"></label>
                     <input type="text" class="form-control form-control-dark" id="buscarPorNombre"
                            placeholder="Buscar..." name="nombre">
                 </form>
             </div>
-            <div class="d-inline-flex align-items-center" id="addToCart" style="margin-right: 20px;">
-                <i class="bi bi-save"></i>
+
+            <div class="d-inline-flex align-items-center" id="addToCart" style="margin-right: 20px;" data-id="${figura.id}" onclick="addFavoriteProduct(${figura.id})">
+                <i class="bi bi-bookmark bi-heart${figura.enFavoritos ? ' text-danger' : ''}"></i>
             </div>
 
             <div>
 
                 <div th:if="${#authorization.expression('!isAuthenticated()')}">
                     <div class="d-flex justify-content-end">
-                        <a href="/inicioSesion/login" class="btn btn-outline-light me-2">Iniciar sesión</a>
-                        <a href="/usuario/signup" class="btn btn-warning">Registrar</a>
+                        <a th:href="@{/aaa}" class="btn btn-outline-light me-2">Iniciar sesión</a>
+                        <a th:href="@{/usuario/signup}" class="btn btn-warning">Registrar</a>
                     </div>
                 </div>
                 <ul style="margin-top: auto" class="nav ">
@@ -56,12 +58,15 @@
                                 </span>
                         </a>
 
-                        <ul class="dropdown-menu">
-                            <li><a href="/perfil/new" class="nav-link px-2 text-secondary">Crear perfil</a></li>
+                        <ul class="dropdown-menu"  >
+                            <li sec:authorize="hasRole('ROLE_ADMIN')"><a href="/admin/meter/figura" class="nav-link px-2 text-secondary">Agregar
+                                figura</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a href="/perfil/list" class="nav-link px-2 text-secondary">Lista perfiles</a></li>
+                            <li sec:authorize="hasRole('ROLE_ADMIN')"><a href="/admin/pagina" class="nav-link px-2 text-secondary">Monitorizar pagina</a>
+                            </li>
+
                             <li>
                                 <form th:action="@{/usuario/logout}" method="post">
                                     <button type="submit" class="btn btn-danger">Salir</button>
@@ -86,21 +91,40 @@
                 <div id="cartTotal">Total: $0.00</div>
                 <button id="btnComprar">Comprar</button>
             </div>
-            <!--   Son para que te cuentes los inicios de sesion est atambien puesto arriba
-      <div  sec:authorize="hasRole('ROLE_ADMIN')" >
+            <!--   Son para que te cuentes los inicios de sesion est atambien puesto arriba-->
+            <!--    <div  sec:authorize="hasRole('ROLE_ADMIN')" >
 
-               <span class="dropdown-item" th:text=" ' App: ' + ${session.numVisitasApp}"></span>
+                    <h1>hola mundo</h1>
+
+                         <span class="dropdown-item" th:text=" ' App: ' + ${session.numVisitasApp}"></span>
 
 
-               <span class="dropdown-item" th:text=" ' index: ' + ${session.numVisitasIndex}"></span>
-       </div> -->
+                         <span class="dropdown-item" th:text=" ' index: ' + ${session.numVisitasIndex}"></span>
+                 </div>
+                  </div>-->
+
+
+
+
         </div>
-
-
-
-
+    </div>
     </div>
 </header>
+
+
+<div class="contenedor">
+    <h1>Figuras</h1>
+    <div class="figura-contenedor">
+        <div class="figura" th:each="figuraDragonBall: ${listaDragonBall}">
+            <a th:href="@{/detalle/dragon/{id}(id=${figuraDragonBall.id})}">
+                <img th:src="${figuraDragonBall.url}" alt="imagen">
+            </a>
+            <h2 th:text="${figuraDragonBall.nombre}"></h2>
+            <p th:text="${figuraDragonBall.arco?.nombre}" ></p>
+            <p>Precio: <span class="price" th:text="${figuraDragonBall.precio}"></span></p>
+        </div>
+    </div>
+</div>
 
     <div class="container">
         <div class="card-container" style="margin-top: 110px;">
@@ -239,6 +263,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
+<script src="/js/buscar.js"></script>
 </body>
 
 </html>
